# Thesis-sims

./: .gitignore  Admittance_controller_using_torque_actuators.ipynb  BDrtdeTest.py  CBFplotter.py  CBFqd02nopush.csv  Complex magnitude.fig  FFTtest.ipynb  FilteredJointPosVelAcc.asv  FilteredJointPosVelAcc.m  FrictionEstimateV1.fig  Impedance_controller_using_torque_actuators.ipynb  L3simcheck.ipynb  PIDtest.bak0  PIDtest.script  PIDtest.urscript  ParameterEstimation.m  README.md  UL.py  UL_rtde.py  UR5eCBF.py  UR5eCBFqd.py  UR5eCBFqdjOnlyTrans.py  UR5eEnergyTank.py  UR5eSafetyAware.py  UR5ftsensor.py  URsimdata.py  Ur5e.py  actuator.py  control_loop_configuration.xml  dynamics_test.m  energy_tank_logs.csv  example_control_loop.py  example_plotting.py  force_control_test_setup.xml  friction_estimation.py  hand_in_2.m  load_trajectory.py  log_plots.py  log_plots_simulation.py  lowpass.py  (+20 more)
CBFNoTanhPlots/: CBFqd02nopush.csv  robot_control_logs.csv  robot_data.csv
EnergyTankNewTCP/: VibrationTest_120_70.csv
EnergyTankNewTCPIntoHole/: VibrationTest_120_70.csv
EnergyTankOldTCP/: VibrationTest_120_70.csv
FFT/: Single-sided_amplitude.fig  (+1 more)
SDUmodel/ur-dynamics-cpp-master/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  LICENSE
SDUmodel/ur-dynamics-cpp-master/lib/: ur_robot.h
SDUmodel/ur-dynamics-cpp-master/python/: print2ccode.py
SDUmodel/ur-dynamics-cpp-master/src/: main.cpp  ur_robot.cpp  ur_robot_constructor.cpp  ur_robot_wrapper.cpp
SDUmodel/ur-dynamics-cpp-master/test/: build_ur3e.m  dynamics_test.py
(+38 files in other folders)
